--- a/package.json
+++ b/package.json
@@ -13,22 +13,28 @@
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "client": "^0.0.1",
+    "express": "^5.1.0",
+    "mongoose": "^7.0.0",
+    "package-name": "^0.1.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.1",
-    "tailwindcss": "^4.1.12"
+    "react-router-dom": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
     "vite": "^7.1.2"
   }
 }
